fix test hazelcast conf